2007-06-14  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/combiners/switch/basicwatchdog.py
	  (SingleBasicWatchdog, SingleBasicWatchdog.eaterSetInactive,
	  SingleBasicWatchdog.eaterSetActive):
	Fix SingleBasicWatchdog to actually work.
	* flumotion/component/combiners/switch/switch.py
	  (Switch.eaterSetActive):
	Use a platform-3 backportable way of figuring out if component
	has started.

2007-06-14  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/feedcomponent.py
	  (MultiInputParseLaunchComponent.get_pipeline_string):
	* flumotion/component/feedcomponent010.py (FeedComponent.do_setup,
	  FeedComponent.parseEaterConfig):
	Forward port from platform-3 of fix when upgrading managers
	without restarting.

2007-06-14  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/combiners/switch/switch.py (Switch.cb):
	* flumotion/component/consumers/disker/disker.py
	  (Disker.update_symlink, Disker._client_error_cb,
	  Disker.configure_pipeline):
	Actually show warnings in admin ui when ical file is not
	parsable and when ical file has been specified but the python
	modules required are not installed on worker.
	Fixes #671
	Fixes #670

2007-06-14  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/base/scheduler.py (Event.__init__,
	  ICalScheduler.parseCalendar):
	Fix where we have a recurrence rule with dtstart/dtend with non
	UTC timezone.
	Fixes #673
	Fix debug statement.

2007-06-13  Michael Smith <msmith@fluendo.com>

	* flumotion/admin/gtk/client.py:
	  Sort author names by surname, rather than mostly by first name but
	  with new people randomly added to the bottom.
	  Add Arek.

2007-06-13  Andy Wingo  <wingo@pobox.com>

	* flumotion/component/base/eaters.glade: 
	* flumotion/component/base/feeders.glade: Fix some spacing issues;
	unfortunately one of the things that we have lost is consistent
	horizontal alignment between column 2 of different tables.